Fixed chrome layout issue

--- a/domotiyii/css/mobile.css
+++ b/domotiyii/css/mobile.css
@@ -64,6 +64,7 @@ body {
 .device .device_status
 {
     float: right;
+    white-space: nowrap;
 }
 
 .device .device_name, .device_status
